Fix at projects show where “likes thumbnail” was overlapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,12 @@ body {
   margin-bottom: 30px;
 }
 
+h4 {
+  img {
+    margin: 0 2px 5px 0;
+  }
+}
+
 .footer {
   position: absolute;
   bottom: 0;
